// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render normally 1`] = `
<Text
  numberOfLines={1}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#000000",
        "flexShrink": 1,
        "fontFamily": "System",
        "fontSize": 17,
        "fontWeight": "400",
        "includeFontPadding": false,
        "marginRight": 20,
        "textAlignVertical": "center",
      },
      undefined,
    ]
  }
>
  label
</Text>
`;

exports[`should render with custom styles 1`] = `
<Text
  numberOfLines={1}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#000000",
        "flexShrink": 1,
        "fontFamily": "System",
        "fontSize": 17,
        "fontWeight": "400",
        "includeFontPadding": false,
        "marginRight": 20,
        "textAlignVertical": "center",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  label
</Text>
`;
